--- a/src/eni/seis/theme/theme/src/less/layout/global.less
+++ b/src/eni/seis/theme/theme/src/less/layout/global.less
@@ -5,9 +5,6 @@
 }
 
 body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
     background-color: #f2f2f2;
 }
 
