--- a/src/eni/seis/theme/theme/src/less/layout/navbar.less
+++ b/src/eni/seis/theme/theme/src/less/layout/navbar.less
@@ -39,6 +39,7 @@
 .navbar-credits {
     @media (min-width: 1390px) {
         float: right;
+        clear: right;
     }
     small,
     a {
@@ -68,9 +69,6 @@
     }
     .navbar-body {
         max-width: 100%!important;
-    }
-    #navbar .page-container {
-        max-width: 80%;
     }
     #portal-globalnav > li > a {
         padding: .2rem;
